# PyTy

./: .coveragerc  .flake8  .gitignore  Makefile  README.md  pyproject.toml
pascal/: __init__.py  bootcamp.py  challenges.py  finals.py  french_deck.py  lesson_one.py  main.py
scripts/: black.sh  flake8.sh  flakehell.sh  unit_test.sh
spec/: french_deck_spec.py
test/: test_bootcamp.py  test_challenges.py  test_finals.py  test_lesson_one.py  test_main.py
