[tool.poetry]
name = "pytraining"
version = "0.1.0"
description = ""
authors = ["Pascal Clarkson <info@artocraft.nl>"]

[tool.poetry.dependencies]
python = "^3.9"
introductie = "^0.1.4"
coverage = "^6.0"
black = "^21.9b0"
flake8 = "^4.0.1"
mamba = "^0.11.2"
expects = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
