[tool.poetry]
name = "pytraining"
version = "0.1.0"
description = ""
authors = ["Pascal Clarkson <info@artocraft.nl>"]

[tool.poetry.dependencies]
python = "^3.9"
introductie = "^0.1.4"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
coverage = "^6.0"
expects = "^0.9.0"
flake8 = "^4.0.1"
isort = "^5.10.0"
mamba = "^0.11.2"
pytest = "^6.2.5"

[tool.black]
line-length = 120
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
line_length = 120
combine_as_imports = true
balanced_wrapping = true
lines_after_imports = 2
include_trailing_comma = true
multi_line_output = 5

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
